--- a/NVmain/Config/PCM_ISSCC_2012_4GB.config
+++ b/NVmain/Config/PCM_ISSCC_2012_4GB.config
@@ -80,13 +80,11 @@ tRAS 0   ; No row restoration needed
 tRCD 48  ; 120ns @ 400 MHz = 48 cycles
 tWP 60   ; Write pulse time. 150ns @ 400 MHz = 60 cycles
 
-; STARTEDIT write-through policy
-
-tRP 0    ; Precharge isn't needed. Writes occur only if needed
+;;; STARTEDIT write-through policy
+tRP 1    ; Precharge isn't needed. Writes occur only if needed
          ; and take tWP time during a precharge (write-back)
-         ; or immediately (write-through)
-         
-; ENDEDIT wright-through policy         
+         ; or immediately (write-through)    
+;;; ENDEDIT wright-through policy         
 
 tCAS 1   ; Assumes data is ready at the global sense amps after tRCD
 tAL 0    ; 0 or 1
